# mcp-journal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: Coverage-Exceptions.md  Future-Features.md  MCP-Flexible-Help.md  Query-and-Search-with-SQLite.md  README.md  Test-Analysis.md  Test-Dimension-Analysis.md  Test-Traceability.md  architecture.md  cli-reference.md  comprehensive-testing.md  configuration.md  developer-guide.md  user-guide.md
doc/api/: README.md  config_activate.md  config_archive.md  config_diff.md  get_template.md  index_rebuild.md  journal_active.md  journal_amend.md  journal_append.md  journal_help.md  journal_query.md  journal_read.md  journal_search.md  journal_stats.md  list_templates.md  log_preserve.md  session_handoff.md  state_snapshot.md  timeline.md  trace_causality.md
examples/: journal_config.py  journal_config.toml
issue/: query-and-search.md
src/mcp_journal/: __init__.py  config.py  engine.py  index.py  locking.py  models.py  server.py  session_journal_watcher.py  tools.py
src/mcp_journal/skills/: journal-checkpoint.md  journal-config.md  journal-end.md  journal-log.md  journal-start.md  journal-trace.md
tests/: __init__.py  conftest.py  test_config.py  test_coverage_gaps.py  test_edge_cases.py  test_engine.py  test_engine_coverage.py  test_error_paths.py  test_full_coverage.py  test_index.py  test_index_coverage.py  test_integration.py  test_properties.py  test_query.py  test_server.py  test_tools.py
